Fix navigation align

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -29,6 +29,7 @@
 
   &__navigation {
     width: 100%;
+    margin: 1rem;
   }
 }
 
